# software-delivery-adw

./: .gitignore  CLAUDE_COMMANDS_SETUP.md  README.md  pyproject.toml
.claude/commands/: config.md  discover.md  planning.md  scope.md  scope_file_10.md  scope_file_11_security.md  scope_file_13_validation_gates.md  scope_file_14_llm_prompts.md  scope_file_2.md  scope_file_4.md  scope_file_6.md  scope_file_9_architecture.md
adws/: adw_config.py  adw_deploy.py  adw_develop.py  adw_discovery.py  adw_planning.py  adw_review.py  adw_scoping.py  adw_scoping_modular.py  adw_scoping_templates.py  adw_test.py  adw_test_infra.py  adw_ui_review.py  scoping_instructions.yaml
adws/adw_modules/: __init__.py  agent.py  aws_cdk_helper.py  cdk_generator.py  config_manager.py  data_types.py  exa_research.py  git_ops.py  state.py  subagents.py  utils.py  worktree_ops.py
claude_commands/commands/: deploy.md  develop.md  resolve_failed_e2e_test.md  resolve_failed_test.md  review.md  scope_file_12_cost_estimate.md  scope_file_3_user_flows.md  scope_file_5_data_schema.md  scope_file_7_aws_analysis.md  scope_file_8_aws_services.md  scope_templates.md  test.md  test_infra.md
subagent_configs/: mcp.discovery.json  mcp.scoping.json  mcp.ui_reviewer.json
